Schools and education modified.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- ABOUT SECTION -->
-            <section class="resume-section" id="about">
-                <div class="resume-section-content">
+            <section class="education-section" id="about">
+                <div class="education-section-content">
                     <!-- NAME -->
                     <h1 class="mb-0">
                         Leo
@@ -84,8 +84,8 @@
             </section>
             <hr class="m-0" />
             <!-- EXPERIENCE SECTION -->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
+            <section class="education-section" id="experience">
+                <div class="education-section-content">
                     <h2 class="mb-6">EXPERIENCES</h2>
                     <div class="h1">Work experiences</div>
                     <!-- Experience elements 1 -->
@@ -174,41 +174,82 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Education-->
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">”
+            <!-- Education SECTION -->
+            <section class="education-section" id="education">
+                <div class="education-section-content">”
                     <h2 class="mb-6">EDUCATION</h2>
                     <div class="h1">Education and schools</div>
+                    <!-- Education elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor of Engineering in ICT</h3>
-                            <div class="subheading mb-1">TAMK - University of Applied Sciences</div>
-                            <div>Software development and embedded systems</div>
+                            <div class="subheading mb-1">TAMK - Tampere University of Applied Sciences</div>
+                            <div>Specializing in software development and embedded systems, this program equips students with advanced skills in creating innovative software solutions and integrating technology into various systems.
+                                The curriculum includes a comprehensive range of subjects such as programming, algorithms, data structures, and systems architecture, with a focus on practical applications and real-world problem-solving.</div>
+                            <div>Key Courses and Projects:
+                                <ul>
+                                    <li>Advanced Programming Techniques: Covered modern programming languages and methodologies.</li>
+                                    <li>Embedded Systems Design: Focused on designing and developing embedded systems with real-time constraints.</li>
+                                    <li>Software Engineering Principles: Emphasized best practices in software development, including Agile methodologies.</li>
+                                    <li>Capstone Project: Developed a significant project demonstrating the application of acquired skills, involving both individual and team-based work.</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">8/2022 - </span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">08/2022 - Expected 06/2026</span></div>
                     </div>
+                    <!-- Education elements 2 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software developer</h3>
+                            <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-1">TPA / SASKY Municipal Education and Training Consortium</div>
-                            <div>Vocational qualification in Information and Communications Technology</div>
+                            <div>Vocational qualification in Information and Communications Technology, focusing on practical skills and knowledge essential for software development and IT systems management.
+                                This program covers a broad spectrum of topics including programming, system administration, and network management.</div>
+                            <div>Key Learnings and Achievements:
+                                <ul>
+                                    <li>Basic Program Development: Gained foundational knowledge in programming principles and practices.</li>
+                                    <li>Python MTA Certification: Earned certification demonstrating proficiency in Python programming.</li>
+                                    <li>Game Development: Developed games using Unity and C#, focusing on practical application and interactive design.</li>
+                                    <li>School Diploma: Successfully completed the vocational program, receiving a diploma in recognition of achievements.</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">08/2020 - 12/2021</span></div>
                     </div>
+                    <!-- Education elements 3 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sergeant</h3>
                             <div class="subheading mb-1">The Finnish Defence Forces</div>
-                            <div>Non-commissioned Officer Training and Leadership Training</div>
+                            <div>Completed Non-Commissioned Officer Training and Leadership Training, focusing on leadership skills, tactical operations, and organizational management within a military context.</div>
+                            <div>Key Training Components:
+                                <ul>
+                                    <li>Leadership Skills: Developed effective leadership techniques and team management strategies.</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span>2000 - 2001</div>
+                        <div class="flex-shrink-0"><span class="text-primary">2000 - 2001</span></div>
                     </div>
+                    <!-- Education elements 4 -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Sergeant</h3>
+                            <div class="subheading mb-1">The Finnish Defence Forces</div>
+                            <div>Completed Non-Commissioned Officer Training and Leadership Training, focusing on leadership skills, tactical operations, and organizational management within a military context.</div>
+                            <div>Key Training Components:
+                                <ul>
+                                    <li>Leadership Skills: Developed effective leadership techniques and team management strategies.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2000 - 2001</span></div>
+                    </div>
+
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
+            <section class="education-section" id="skills">
+                <div class="education-section-content">
                     <h2 class="mb-6">SKISLLS&TOOLS</h2>
                     <div class="h1">Skills & Tools</div>
                     <div>
@@ -282,8 +323,8 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
+            <section class="education-section" id="interests">
+                <div class="education-section-content">
                     <h2 class="mb-6">INTERESTS</h2>
                     <div class="h1">INTERESTS & HOBBIES</div>
                     <div>
@@ -301,7 +342,7 @@
             </section>
             <hr class="m-0" />
             <!-- Project example with snapshot or gif -->
-            <section class="resume-section" id="projects">
+            <section class="education-section" id="projects">
                 <div class="Project examples" style="flex-shrink: initial">
                     <h2 class="mb-6">PROJECTS</h2>
                     <div class="h1">Example projects</div>
