Schools and education modified.

--- a/index.html
+++ b/index.html
@@ -232,12 +232,13 @@
                     <!-- Education elements 4 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Sergeant</h3>
+                            <h3 class="mb-0">High school graduatet</h3>
                             <div class="subheading mb-1">The Finnish Defence Forces</div>
-                            <div>Completed Non-Commissioned Officer Training and Leadership Training, focusing on leadership skills, tactical operations, and organizational management within a military context.</div>
-                            <div>Key Training Components:
+                            <div>High School Diploma and Matriculation Examination Completion</div>
+                            <div>Key Learnings and Achievements:
                                 <ul>
-                                    <li>Leadership Skills: Developed effective leadership techniques and team management strategies.</li>
+                                    <li>Successfully completed secondary education and passed the Finnish national matriculation exam, qualifying for higher education.</li>
+                                    <li>Delivered a speech/performance during school-wide events, reflecting the school's focus on expressive arts and creativity.</li>
                                 </ul>
                             </div>
                         </div>
