Schools and education modified.

--- a/index.html
+++ b/index.html
@@ -184,12 +184,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor of Engineering in ICT</h3>
                             <div class="subheading mb-1">TAMK - Tampere University of Applied Sciences</div>
-                            <div>Specializing in software development and embedded systems, this program equips students with advanced skills in creating innovative software solutions and integrating technology into various systems.
-                                The curriculum includes a comprehensive range of subjects such as programming, algorithms, data structures, and systems architecture, with a focus on practical applications and real-world problem-solving.</div>
+                            <div>Specializing in software development, this program equips students with advanced skills in software solutions and system integration,
+                                covering programming, algorithms, data structures, and systems architecture with a focus on practical, real-world problem-solving.</div>
                             <div>Key Courses and Projects:
                                 <ul>
                                     <li>Advanced Programming Techniques: Covered modern programming languages and methodologies.</li>
-                                    <li>Embedded Systems Design: Focused on designing and developing embedded systems with real-time constraints.</li>
                                     <li>Software Engineering Principles: Emphasized best practices in software development, including Agile methodologies.</li>
                                     <li>Capstone Project: Developed a significant project demonstrating the application of acquired skills, involving both individual and team-based work.</li>
                                 </ul>
@@ -202,8 +201,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-1">TPA / SASKY Municipal Education and Training Consortium</div>
-                            <div>Vocational qualification in Information and Communications Technology, focusing on practical skills and knowledge essential for software development and IT systems management.
-                                This program covers a broad spectrum of topics including programming, system administration, and network management.</div>
+                            <div>Vocational qualification in Information and Communications Technology, focusing on practical skills and knowledge essential for software development and IT systems management.</div>
                             <div>Key Learnings and Achievements:
                                 <ul>
                                     <li>Basic Program Development: Gained foundational knowledge in programming principles and practices.</li>
@@ -237,12 +235,28 @@
                             <div>High School Diploma and Matriculation Examination Completion</div>
                             <div>Key Learnings and Achievements:
                                 <ul>
-                                    <li>Successfully completed secondary education and passed the Finnish national matriculation exam, qualifying for higher education.</li>
                                     <li>Delivered a speech/performance during school-wide events, reflecting the school's focus on expressive arts and creativity.</li>
+                                    <li>Successfully completed secondary education and passed the Finnish national matriculation exam, qualifying for higher education.</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2000 - 2001</span></div>
+                    </div>
+                    <!-- Education elements 5 -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Yokohama Asahiku Wakabadai North School</h3>
+                            <div class="subheading mb-1">Yokohama, Japan</div>
+                            <div>Attended for six years, gaining fluency in Japanese and a deep understanding of Japanese culture.</div>
+                            <div>Key Learnings:
+                                <ul>
+                                    <li>Achieved fluency in Japanese, both spoken and written.</li>
+                                    <li>Developed a strong understanding of Japanese customs, traditions, and societal values.</li>
+                                    <li>Engaged in cultural exchange and immersive learning experiences.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Years Attended</span></div>
                     </div>
                 </div>
             </section>
