Schools and education modified.

--- a/index.html
+++ b/index.html
@@ -64,11 +64,20 @@
                     </div>
                     <div class="lead mb-1">
                         <p>
-                            I’m currently studying IT Engineering at Tampere University of Applied Sciences and have already completed Software Developer training at Sasky.
-                            With 15 years of experience as an entrepreneur in the service industry, I’ve picked up a wide range of valuable skills.
+                            <strong>Now:</strong> I’m currently studying IT Engineering at Tampere University of Applied Sciences
+                            and have already completed Software Developer training at Sasky.
+                        </p>
+                        <p>
+                            <strong>Past:</strong> With 15 years of experience as an entrepreneur in the service industry,
+                            I’ve picked up a wide range of valuable skills.
                             I have a solid track record of getting projects done on time, whether I’m working solo or in a team.
-                            I’m dedicated to seeing things through and always strive to meet customer needs while staying in line with company goals.
-                            My background as an entrepreneur has also taught me how to handle challenges and prioritize tasks effectively, helping me keep a big-picture view.
+                            My background as an entrepreneur has also taught me how to handle challenges and prioritize tasks effectively,
+                            helping me keep a big-picture view.
+                        </p>
+                        <p>
+                            <strong>Future:</strong> I’m dedicated to seeing things through and always strive to
+                            meet customer needs while staying in line with company goals, aiming to continue growing as
+                            a developer and contribute to meaningful projects.
                         </p>
                     </div>
                     <!-- Personal information, sosial media, CV, github -->
@@ -86,8 +95,8 @@
             <!-- EXPERIENCE SECTION -->
             <section class="education-section" id="experience">
                 <div class="education-section-content">
-                    <h2 class="mb-6">EXPERIENCES</h2>
-                    <div class="h1">Work experiences</div>
+                    <h2 class="mb-6">WORK EXPERIENCES</h2>
+                    <div class="h1">WORK EXPERIENCES</div>
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -178,7 +187,7 @@
             <section class="education-section" id="education">
                 <div class="education-section-content">”
                     <h2 class="mb-6">EDUCATION</h2>
-                    <div class="h1">Education and schools</div>
+                    <div class="h1">EDUCATION</div>
                     <!-- Education elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -230,7 +239,7 @@
                     <!-- Education elements 4 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">High school graduatet</h3>
+                            <h3 class="mb-0">High school graduated</h3>
                             <div class="subheading mb-1">The Finnish Defence Forces</div>
                             <div>High School Diploma and Matriculation Examination Completion</div>
                             <div>Key Learnings and Achievements:
@@ -240,13 +249,13 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2000 - 2001</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                     <!-- Education elements 5 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Yokohama Asahiku Wakabadai North School</h3>
-                            <div class="subheading mb-1">Yokohama, Japan</div>
+                            <h3 class="mb-0">Graduated</h3>
+                            <div class="subheading mb-1">Yokohama Asahiku Wakabadai North School</div>
                             <div>Attended for six years, gaining fluency in Japanese and a deep understanding of Japanese culture.</div>
                             <div>Key Learnings:
                                 <ul>
@@ -256,16 +265,16 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Years Attended</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Skills-->
+            <!-- SKILLS SECTION -->
             <section class="education-section" id="skills">
                 <div class="education-section-content">
-                    <h2 class="mb-6">SKISLLS&TOOLS</h2>
-                    <div class="h1">Skills & Tools</div>
+                    <h2 class="mb-6">SKISLLS & EXPERIENCES</h2>
+                    <div class="h1">SKISLLS & EXPERIENCES</div>
                     <div>
                         <img src="assets/icons/python_icon.png" class="logos" alt="python">
                         <img src="assets/icons/cplus_icon.png" class="logos" alt="Cpp">
@@ -290,49 +299,15 @@
                         <img src="assets/icons/windows_icon.png" class="logos" alt="Windows">
                         <img src="assets/icons/linux_icon.png" class="logos" alt="Linux">
                     </div>
-                    <!-- UNUSED SECTION
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-python " style="color: #000000"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-c" style="color: #000000"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5" style="color: #000000"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square" style="color: #000000"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node"></i></li>
+                    <ul class="list-styled">
+                        <li>Programming Languages: Python, C++, C#, HTML, CSS, JavaScript, Java</li>
+                        <li>Database Management: MySQL</li>
+                        <li>Libraries: Pandas</li>
+                        <li>Tools: Docker, Visual Studio Code, JetBrains, Arduino IDE, GitHub, MS365, AWS</li>
+                        <li>Game Development: Unity</li>
+                        <li>Operating Systems: macOS, Windows, Linux</li>
                     </ul>
-                    -->
-                    <table>
-                        <tr>
-                            <th>Technology</th>
-                            <th>Courses and Experience</th>
-                        </tr>
-                        <tr>
-                            <td>PYTHON</td>
-                            <td>MTA 98-381, data analyzing and machine learning (LSTM & CNN), Picture to art program...</td>
-                        </tr>
-                        <tr>
-                            <td>Cpp</td>
-                            <td>Airport simulation, Searching and Sorting algorithms, Reservation system...</td>
-                        </tr>
-                        <tr>
-                            <td>Database</td>
-                            <td>Sql, Sqlite, Apache Spark...</td>
-                        </tr>
-                        <tr>
-                            <td>HTML, JS, CSS</td>
-                            <td>Web sites, responsive web design, API, charts(bootstrap)</td>
-                        </tr>
-                        <tr>
-                            <td>SQL / SQLite</td>
-                            <td>REST API with Sqlite, JavaScript and Docker</td>
-                        </tr>
-                        <tr>
-                            <td>Unity & C#</td>
-                            <td>Game making with a team</td>
-                        </tr>
-                        <tr>
-                            <td>Photoshop & InDesign</td>
-                            <td>Photo retouching, advertise creation, catalogue...</td>
-                        </tr>
-                    </table>
+
                 </div>
             </section>
             <hr class="m-0" />
