Skills and experiences updated logos icons changed.

--- a/index.html
+++ b/index.html
@@ -273,41 +273,44 @@
             <!-- SKILLS SECTION -->
             <section class="education-section" id="skills">
                 <div class="education-section-content">
-                    <h2 class="mb-6">SKISLLS & EXPERIENCES</h2>
-                    <div class="h1">SKISLLS & EXPERIENCES</div>
+                    <h2 class="mb-6">SKILLS & EXPERIENCES</h2>
+                    <div class="h1">SKILLS & EXPERIENCES</div>
                     <div>
-                        <img src="assets/icons/python_icon.png" class="logos" alt="python">
-                        <img src="assets/icons/cplus_icon.png" class="logos" alt="Cpp">
+                        <img src="assets/icons/python_icon.png" class="logos" alt="Python">
+                        <img src="assets/icons/cplus_icon.png" class="logos" alt="C++">
                         <img src="assets/icons/c%23_icon.png" class="logos" alt="C#">
-                        <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
-                        <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
-                        <img src="assets/icons/javascript_icon.png" class="logos" alt="Javascript">
-                        <img src="assets/icons/java_icon.png" class="logos" alt="Java">
-                        <img src="assets/icons/mysql_icon2.png" class="logos" alt="MySql">
-                        <img src="assets/icons/pandas_icon.png" class="logos" alt="Pandas">
-                        <img src="assets/icons/docker_icon.png" class="logos" alt="Docker">
+                        <img src="assets/icons/nodeJS_icon.png" class="logos" alt="Node JS">
+                        <img src="assets/icons/kotlin_icon.png" class="logos" alt="Kotlin">
                     </div>
                     <div>
-                        <img src="assets/icons/vscode_icon.png" class="logos" alt="VSCode">
-                        <img src="assets/icons/jetbrains_icon.png" class="logos" alt="JetBrains">
-                        <img src="assets/icons/arduino_icon.png" class="logos" alt="arduino IDE">
-                        <img src="assets/icons/github_icon.png" class="logos" alt="GitHub">
+                        <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
+                        <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
+                        <img src="assets/icons/java_icon.png" class="logos" alt="Java">
+                        <img src="assets/icons/vba_icon.png" class="logos" alt="VBA">
+                        <img src="assets/icons/sql_icon.png" class="logos" alt="SQL">
+                    </div>
+                    <div>
+                        <img src="assets/icons/git_icon.png.png" class="logos" alt="Git">
+                        <img src="assets/icons/api_icon.png.png" class="logos" alt="REST API">
+                        <img src="assets/icons/androidStudio_icon.png.png" class="logos" alt="Android stuidio">
+                        <img src="assets/icons/docker_icon.png" class="logos" alt="Docker">
+                        <img src="assets/icons/mysql_icon.png" class="logos" alt="MySql">
+                    </div>
+                    <div>
                         <img src="assets/icons/ms365_icon.png" class="logos" alt="ms365">
                         <img src="assets/icons/aws_icon.png" class="logos" alt="AWS">
                         <img src="assets/icons/unity_icon.png" class="logos" alt="Unity">
                         <img src="assets/icons/macOs_icon.png" class="logos" alt="macOs">
                         <img src="assets/icons/windows_icon.png" class="logos" alt="Windows">
-                        <img src="assets/icons/linux_icon.png" class="logos" alt="Linux">
                     </div>
                     <ul class="list-styled">
-                        <li>Programming Languages: Python, C++, C#, HTML, CSS, JavaScript, Java</li>
-                        <li>Database Management: MySQL</li>
-                        <li>Libraries: Pandas</li>
+                        <li>Programming Languages: Python, C++, C#, Java, JavaScript, Kotlin, Rust, Visual Basic</li>
+                        <li>Web Development: HTML, CSS, Node.js, React</li>
+                        <li>Database Management: SQL, MySQL</li>
                         <li>Tools: Docker, Visual Studio Code, JetBrains, Arduino IDE, GitHub, MS365, AWS</li>
-                        <li>Game Development: Unity</li>
-                        <li>Operating Systems: macOS, Windows, Linux</li>
+                        <li>Game Development: Unity, C#</li>
+                        <li>Operating Systems: macOS, Windows, Android OS, iOS</li>
                     </ul>
-
                 </div>
             </section>
             <hr class="m-0" />
