Skills and experiences updated logos icons changed.

--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
                         <img src="assets/icons/sql_icon.png" class="logos" alt="SQL">
                     </div>
                     <div>
-                        <img src="assets/icons/git_icon.png.png" class="logos" alt="Git">
-                        <img src="assets/icons/api_icon.png.png" class="logos" alt="REST API">
-                        <img src="assets/icons/androidStudio_icon.png.png" class="logos" alt="Android stuidio">
+                        <img src="assets/icons/git_icon.png" class="logos" alt="Git">
+                        <img src="assets/icons/api_icon.png" class="logos" alt="REST API">
+                        <img src="assets/icons/androidStudio_icon.png" class="logos" alt="Android stuidio">
                         <img src="assets/icons/docker_icon.png" class="logos" alt="Docker">
-                        <img src="assets/icons/mysql_icon.png" class="logos" alt="MySql">
+                        <img src="assets/icons/mySql_icon.png" class="logos" alt="MySql">
                     </div>
                     <div>
                         <img src="assets/icons/ms365_icon.png" class="logos" alt="ms365">
@@ -305,7 +305,7 @@
                     </div>
                     <ul class="list-styled">
                         <li>Programming Languages: Python, C++, C#, Java, JavaScript, Kotlin, Rust, Visual Basic</li>
-                        <li>Web Development: HTML, CSS, Node.js, React</li>
+                        <li>Web Development: HTML, CSS, Node.js, React, REST API</li>
                         <li>Database Management: SQL, MySQL</li>
                         <li>Tools: Docker, Visual Studio Code, JetBrains, Arduino IDE, GitHub, MS365, AWS</li>
                         <li>Game Development: Unity, C#</li>
