Interests section updatetd.

--- a/index.html
+++ b/index.html
@@ -320,16 +320,23 @@
                     <h2 class="mb-6">INTERESTS</h2>
                     <div class="h1">INTERESTS & HOBBIES</div>
                     <div>
-                        As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever I can (because debugging code isn't quite the same as exploring ancient ruins!).
+                        As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever
+                        I can (because debugging code isn't quite the same as exploring ancient ruins!).
                     </div>
                     <div>
-                        When I find myself confined indoors, I dive deep into the captivating world of Japanese cinema and TV shows.
-                        But that's not all—I'm also a skilled builder and fixer of RC cars and planes, ensuring endless fun for my little one.
+                        When I find myself confined indoors, I dive deep into the captivating world of Japanese cinema and TV shows
+                        to keep my Japanese skills sharp. I'm also a skilled builder and fixer of RC cars and planes, ensuring endless fun for my little one.
+                    </div>
+                    <div>
+                        I enjoy growing indoor plants, adding a touch of nature to my tech-filled life, and gaming with my son,
+                        where we team up for epic virtual adventures.
                     </div>
                     <div>
                         And let's not forget I'm deeply committed to programming, with a permanent seat in the technology realm.
-                        Oh, and did I mention I'm also a seasoned chef and former restaurant owner? The kitchen is my sanctuary, where my culinary creations become works of art.
+                        Oh, and did I mention I'm also a seasoned chef and former restaurant owner?
+                        The kitchen is my sanctuary, where my culinary creations become works of art.
                     </div>
+
                 </div>
             </section>
             <hr class="m-0" />
