--- a/index.html
+++ b/index.html
@@ -64,19 +64,18 @@
                     </div>
                     <div class="lead mb-1">
                         <p>
-                            <strong>Now:</strong> I’m currently studying IT Engineering at Tampere University of Applied Sciences
+                            I’m currently studying IT Engineering at Tampere University of Applied Sciences
                             and have already completed Software Developer training at Sasky.
                         </p>
                         <p>
-                            <strong>Past:</strong> With 15 years of experience as an entrepreneur in the service industry,
-                            I’ve picked up a wide range of valuable skills.
+                            With 15 years of experience as an entrepreneur in the service industry, I’ve picked up a wide range of valuable skills.
                             I have a solid track record of getting projects done on time, whether I’m working solo or in a team.
                             My background as an entrepreneur has also taught me how to handle challenges and prioritize tasks effectively,
                             helping me keep a big-picture view.
                         </p>
                         <p>
-                            <strong>Future:</strong> I’m dedicated to seeing things through and always strive to
-                            meet customer needs while staying in line with company goals, aiming to continue growing as
+                            I’m dedicated to seeing things through and always strive to meet customer needs
+                            while staying in line with company goals, aiming to continue growing as
                             a developer and contribute to meaningful projects.
                         </p>
                     </div>
@@ -96,7 +95,7 @@
             <section class="education-section" id="experience">
                 <div class="education-section-content">
                     <h2 class="mb-6">WORK EXPERIENCES</h2>
-                    <div class="h1">WORK EXPERIENCES</div>
+                    <div class="h1">WORK</div>
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -274,7 +273,7 @@
             <section class="education-section" id="skills">
                 <div class="education-section-content">
                     <h2 class="mb-6">SKILLS & EXPERIENCES</h2>
-                    <div class="h1">SKILLS & EXPERIENCES</div>
+                    <div class="h1">EXPERIENCES</div>
                     <div>
                         <img src="assets/icons/python_icon.png" class="logos" alt="Python">
                         <img src="assets/icons/cplus_icon.png" class="logos" alt="C++">
@@ -317,8 +316,8 @@
             <!-- Interests-->
             <section class="education-section" id="interests">
                 <div class="education-section-content">
-                    <h2 class="mb-6">INTERESTS</h2>
-                    <div class="h1">INTERESTS & HOBBIES</div>
+                    <h2 class="mb-6">INTERESTS & HOBBIES</h2>
+                    <div class="h1">INTERESTS</div>
                     <div>
                         As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever
                         I can (because debugging code isn't quite the same as exploring ancient ruins!).
@@ -343,8 +342,8 @@
             <!-- Project example with snapshot or gif -->
             <section class="education-section" id="projects">
                 <div class="Project examples" style="flex-shrink: initial">
-                    <h2 class="mb-6">PROJECTS</h2>
-                    <div class="h1">Example projects</div>
+                    <h2 class="mb-6">PROJECTS EXAMPLES</h2>
+                    <div class="h1">PROJECTS</div>
                     <!-- PROJECT element-->
                     <div class="container">
                         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover" style="width: auto">
