typed.js taxt updated

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <section class="education-section" id="experience">
                 <div class="education-section-content">
                     <h2 class="mb-6">WORK EXPERIENCES</h2>
-                    <div class="h1">WORK</div>
+                    <div class="h1">WORK/div>
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -280,8 +280,6 @@
                         <img src="assets/icons/c%23_icon.png" class="logos" alt="C#">
                         <img src="assets/icons/nodeJS_icon.png" class="logos" alt="Node JS">
                         <img src="assets/icons/kotlin_icon.png" class="logos" alt="Kotlin">
-                    </div>
-                    <div>
                         <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
                         <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
                         <img src="assets/icons/java_icon.png" class="logos" alt="Java">
@@ -294,8 +292,6 @@
                         <img src="assets/icons/androidStudio_icon.png" class="logos" alt="Android stuidio">
                         <img src="assets/icons/docker_icon.png" class="logos" alt="Docker">
                         <img src="assets/icons/mySql_icon.png" class="logos" alt="MySql">
-                    </div>
-                    <div>
                         <img src="assets/icons/ms365_icon.png" class="logos" alt="ms365">
                         <img src="assets/icons/aws_icon.png" class="logos" alt="AWS">
                         <img src="assets/icons/unity_icon.png" class="logos" alt="Unity">
