typed.js taxt updated

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <section class="education-section" id="experience">
                 <div class="education-section-content">
                     <h2 class="mb-6">WORK EXPERIENCES</h2>
-                    <div class="h1">WORK/div>
+                    <div class="h1">WORK</div>
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -181,7 +181,6 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
             <!-- Education SECTION -->
             <section class="education-section" id="education">
                 <div class="education-section-content">”
