--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <!-- EXPERIENCE SECTION -->
             <section class="education-section" id="experience">
                 <div class="education-section-content">
-                    <h2 class="mb-6">WORK EXPERIENCES</h2>
-                    <div class="h1">WORK</div>
+                    <h2 class="mb-6">WORK</h2>
+                    <div class="h1">WORK EXPERIENCES</div>
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -271,8 +271,8 @@
             <!-- SKILLS SECTION -->
             <section class="education-section" id="skills">
                 <div class="education-section-content">
-                    <h2 class="mb-6">SKILLS & EXPERIENCES</h2>
-                    <div class="h1">EXPERIENCES</div>
+                    <h2 class="mb-6">EXPERIENCES</h2>
+                    <div class="h1">SKILLS & EXPERIENCES</div>
                     <div>
                         <img src="assets/icons/python_icon.png" class="logos" alt="Python">
                         <img src="assets/icons/cplus_icon.png" class="logos" alt="C++">
@@ -311,8 +311,8 @@
             <!-- Interests-->
             <section class="education-section" id="interests">
                 <div class="education-section-content">
-                    <h2 class="mb-6">INTERESTS & HOBBIES</h2>
-                    <div class="h1">INTERESTS</div>
+                    <h2 class="mb-6">INTERESTS</h2>
+                    <div class="h1">INTERESTS & HOBBIES</div>
                     <div>
                         As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever
                         I can (because debugging code isn't quite the same as exploring ancient ruins!).
@@ -337,8 +337,8 @@
             <!-- Project example with snapshot or gif -->
             <section class="education-section" id="projects">
                 <div class="Project examples" style="flex-shrink: initial">
-                    <h2 class="mb-6">PROJECTS EXAMPLES</h2>
-                    <div class="h1">PROJECTS</div>
+                    <h2 class="mb-6">PROJECTS</h2>
+                    <div class="h1">PROJECTS EXAMPLES</div>
                     <!-- PROJECT element-->
                     <div class="container">
                         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover" style="width: auto">
