--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <section class="education-section" id="projects">
                 <div class="Project examples" style="flex-shrink: initial">
                     <h2 class="mb-6">PROJECTS</h2>
-                    <div class="h1">PROJECTS EXAMPLE</div>
+                    <div class="h1">PROJECTS EXAMPLES</div>
                     <!-- PROJECT element-->
                     <div class="container">
                         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover" style="width: auto">
