--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
                         <img src="assets/icons/sql_icon.png" class="logos" alt="SQL">
                     </div>
                     <div>
+                    </div>
+                    <div>
                         <img src="assets/icons/git_icon.png" class="logos" alt="Git">
                         <img src="assets/icons/api_icon.png" class="logos" alt="REST API">
                         <img src="assets/icons/androidStudio_icon.png" class="logos" alt="Android stuidio">
