Small gap addad

--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
                         <img src="assets/icons/macOs_icon.png" class="logos" alt="macOs">
                         <img src="assets/icons/windows_icon.png" class="logos" alt="Windows">
                     </div>
+                    <div>
+                    </div>
                     <ul class="list-styled">
                         <li>Programming Languages: Python, C++, C#, Java, JavaScript, Kotlin, Rust, Visual Basic</li>
                         <li>Web Development: HTML, CSS, Node.js, React, REST API</li>
